feat: update couchbase database
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>